tests/integration_tests/snapshots/integration_tests__e2e_tests__address_with_nullifiers-transactions.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: transactions
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [],
    "cursor": null
  }
}
