tests/integration_tests/snapshots/integration_tests__e2e_tests__compress_lamports.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "2qqaxZsryHeVpnF1Gs55qrnBBYoUpFHxVN31GryNeVnw",
        "address": null,
        "discriminator": 0,
        "data": "",
        "dataHash": null,
        "owner": "9Mrg8qhh4862JK83S9tWBGudP7QhPwNDiX7giDGcH8Bg",
        "lamports": 20,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "leafIndex": 0,
        "seq": 1,
        "slotUpdated": 0
      }
    ],
    "cursor": null
  }
}
