tests/integration_tests/snapshots/integration_tests__e2e_tests__debug_incorrect_root_v2-accounts.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: accounts
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": [
      {
        "hash": "3FMGGMcHHs1XPJ43m5VXXuhhHi7pAYVuWQ3c8ZLV2QXV",
        "address": null,
        "data": null,
        "owner": "CTTAXk8M6Pyb251jPdg56ySFd893eQTbLcdjnFu5ZRWL",
        "lamports": 999990000,
        "tree": "5bdFnXU47QjzGpzHfXnxcEi5WXyxzEAZzd1vrE39bf1W",
        "leafIndex": 1,
        "seq": 2,
        "slotUpdated": 0
      }
    ],
    "cursor": null
  }
}
