tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_lamport_transfer-K75mYjtM3zrpBqBwEtQ1RsM39YULMMMoP1pm5ZQkF2h-utxos.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: utxos
---
{
  "context": {
    "slot": 0
  },
  "value": {
    "items": []
  }
}
