tests/integration_tests/snapshots/integration_tests__e2e_tests__e2e_lamport_transfer-owner-signatures.snap
---
source: tests/integration_tests/e2e_tests.rs
expression: signatures
---
[
  {
    "signature": "4iXfgDbgAEQU8hcto67feZsNHxFGm3JKKo97zDgnT84VAUTTjiSCEyi1ZSMFdiybS5XmRHy3nW1qDtKkTPEBpsV9",
    "slot": 0,
    "blockTime": "1970-01-01T00:00:00Z"
  }
]
